# egressos

./: pyproject.toml
egressos/: analyse.py  crawl.py
