[tool.poetry]
name = "egressos"
version = "0.1.0"
description = ""
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.1"
html5lib = "^1.0.1"
requests = "^2.22.0"
seaborn = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
jedi = "^0.15.1"
mypy = "^0.750"

[tool.poetry.scripts]
egressos-crawl = "egressos.crawl:run"
egressos-analyse = "egressos.analyse:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
